--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -252,14 +252,14 @@ SG_B_2 : "🎧 ᴀᴜᴅɪᴏ 🎧"
 SG_B_3 : "🎥 ᴠɪᴅᴇᴏ 🎥"
 
 # Start
-S_B_1 : "➕ ᴀᴅᴅ ᴍᴇ ➕"
-S_B_2 : "⛦ sᴜᴘᴘᴏʀᴛ 🥀"
-S_B_3 : "➕ ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ ➕"
-S_B_4 : " ʜᴇʟᴘ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅ 🥀"
-S_B_5 : "⛦ ᴏᴡɴᴇʀ "
-S_B_6 : " ᴄʜᴀɴɴᴇʟ 🥀"
-S_B_7 : "⛦ sᴏᴜʀᴄᴇ "
-S_B_8 : " ʏᴏᴜᴛᴜʙᴇ 🥀"
+S_B_1 : "𝖠𝖽𝖽 𝖬𝖾"
+S_B_2 : "❍ sᴜᴘᴘᴏʀᴛ ❍"
+S_B_3 : "❍ 𝐀ᴅᴅ 𝐌ᴇ 𝐘ᴏᴜʀ 𝐆ʀᴏᴜᴘ ❍"
+S_B_4 : " ❍ 𝐘꯭ᴏᴜ꯭ʀ ꯭𝐇꯭ᴇʟ꯭ᴘᴇ꯭ʀ ❍ "
+S_B_5 : " ❍ 𝐎꯭ᴡ꯭ɴᴇ꯭ʀ ❍ "
+S_B_6 : "❍ ᴄʜᴀɴɴᴇʟ ❍"
+S_B_7 : "❍ 𝐏꯭𝐑꯭𝐎꯭𝐌꯭𝐎꯭𝐓𝐈꯭𝐎꯭𝐍 ꯭𝐀꯭𝐕꯭𝐀𝐈꯭𝐋꯭𝐀꯭𝐁꯭𝐋꯭𝐄 ❍ "
+S_B_8 : "❍ ʏᴏᴜᴛᴜʙᴇ ❍"
 S_B_9 : "⛦ sᴜᴩᴩᴏʀᴛ "
 
 H_B_1 : "Aᴅᴍɪɴ"
