--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -258,6 +258,7 @@ S_B_3 : "❍ 𝐀ᴅᴅ 𝐌ᴇ 𝐘ᴏᴜʀ 𝐆ʀᴏᴜᴘ ❍"
 S_B_4 : " ❍ 𝐘꯭ᴏᴜ꯭ʀ ꯭𝐇꯭ᴇʟ꯭ᴘᴇ꯭ʀ ❍ "
 S_B_5 : " ❍ 𝐎꯭ᴡ꯭ɴᴇ꯭ʀ ❍ "
 S_B_6 : "❍ 𝐏꯭𝐑꯭𝐎꯭𝐌꯭𝐎꯭𝐓𝐈꯭𝐎꯭𝐍 ꯭𝐀꯭𝐕꯭𝐀𝐈꯭𝐋꯭𝐀꯭𝐁꯭𝐋꯭𝐄 ❍"
+S_B_7 : "⛦ sᴏᴜʀᴄᴇ "
 S_B_8 : "❍ ʏᴏᴜᴛᴜʙᴇ ❍"
 S_B_9 : "⛦ sᴜᴩᴩᴏʀᴛ "
 
