--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -177,7 +177,7 @@ song_9 : "ꜰᴀɪʟᴇᴅ ᴛᴏ ᴅᴏᴡɴʟᴏᴀᴅ sᴏɴɢ ꜰʀᴏᴍ ʏ
 song_10 : "ꜰᴀɪʟᴇᴅ ᴛᴏ ᴜᴘʟᴏᴀᴅ ᴏɴ ᴛᴇʟᴇɢʀᴀᴍ sᴇʀᴠᴇʀs."
 song_11 : "ᴜᴘʟᴏᴀᴅɪɴɢ sᴛᴀʀᴛᴇᴅ ʙᴀʙʏ\n\nᴘʟᴇᴀsᴇ ʜᴏʟᴅ ᴏɴ..."
 
-play_1 : "👀"
+play_1 : "❤️‍🔥"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -262,30 +262,30 @@ S_B_7 : "⛦ sᴏᴜʀᴄᴇ "
 S_B_8 : "❍ ʏᴏᴜᴛᴜʙᴇ ❍"
 S_B_9 : "⛦ sᴜᴩᴩᴏʀᴛ "
 
-H_B_1 : "Aᴅᴍɪɴ"
-H_B_2 : "Aᴜᴛʜ"
-H_B_3 : "Bʀᴏᴀᴅᴄᴀsᴛ"
-H_B_4 : "Bʟ-Cʜᴀᴛ"
-H_B_5 : "Bʟ-Usᴇʀ"
-H_B_6 : "C-Pʟᴀʏ"
-H_B_7 : "G-Bᴀɴ"
-H_B_8 : "Lᴏᴏᴘ"
-H_B_9 : "Mᴀɪɴᴛᴇɴᴀɴᴄᴇ"
-H_B_10 : "Pɪɴɢ"
-H_B_11 : "Pʟᴀʏ"
-H_B_12 : "Sʜᴜғғʟᴇ"
-H_B_13 : "Sᴇᴇᴋ"
-H_B_14 : "Sᴏɴɢ"
-H_B_15 : "Sᴘᴇᴇᴅ"
-H_B_16 : "ɢᴘᴛ"
-H_B_17 : "Rᴇᴇʟ"
-H_B_18 : "ᴛᴀɢ-ᴀʟʟ"
-H_B_19 : "ɪɴғᴏ"
-H_B_20 : "Hɪsᴛᴏʀʏ"
-H_B_21 : "ᴇxᴛʀᴀ"
-H_B_22 : "ɪᴍᴀɢᴇ"
-H_B_23 : "ᴀᴄᴛɪᴏɴ"
-H_B_24 : "sᴇᴀʀᴄʜ"
+H_B_1 : "❍ Aᴅᴍɪɴ ❍"
+H_B_2 : "❍ Aᴜᴛʜ ❍"
+H_B_3 : "❍ Bʀᴏᴀᴅᴄᴀsᴛ ❍"
+H_B_4 : "❍ Bʟ-Cʜᴀᴛ ❍"
+H_B_5 : "❍ Bʟ-Usᴇʀ ❍"
+H_B_6 : "❍ C-Pʟᴀʏ ❍"
+H_B_7 : "❍ G-Bᴀɴ ❍"
+H_B_8 : "❍ Lᴏᴏᴘ ❍"
+H_B_9 : "❍ Mᴀɪɴᴛᴇɴᴀɴᴄᴇ ❍"
+H_B_10 : "❍ Pɪɴɢ ❍"
+H_B_11 : "❍ Pʟᴀʏ ❍"
+H_B_12 : "❍ Sʜᴜғғʟᴇ ❍"
+H_B_13 : "❍ Sᴇᴇᴋ ❍"
+H_B_14 : "❍ Sᴏɴɢ ❍"
+H_B_15 : "❍ Sᴘᴇᴇᴅ ❍"
+H_B_16 : "❍ ɢᴘᴛ ❍"
+H_B_17 : "❍ Rᴇᴇʟ ❍"
+H_B_18 : "❍ ᴛᴀɢ-ᴀʟʟ ❍"
+H_B_19 : "❍ ɪɴғᴏ ❍"
+H_B_20 : "❍ Hɪsᴛᴏʀʏ ❍"
+H_B_21 : "❍ ᴇxᴛʀᴀ ❍"
+H_B_22 : "❍ ɪᴍᴀɢᴇ ❍"
+H_B_23 : "❍ ᴀᴄᴛɪᴏɴ ❍"
+H_B_24 : "❍ sᴇᴀʀᴄʜ ❍"
 
 P_B_1 : "⛦ ᴀᴜᴅɪᴏ "
 P_B_2 : " ᴠɪᴅᴇᴏ 🥀"
